--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -12055,6 +12055,7 @@ nav > a {
 }
 main > h1, main > .h1 {
   text-align: center;
+  margin-top: 30px;
 }
 
 span {
@@ -12086,8 +12087,6 @@ p {
 
 .photo-mobile > img {
   border-radius: 15px;
-  margin-left: 50%;
-  transform: translateX(-50%);
   box-shadow: -1px 1px 65px -4px rgba(0, 0, 0, 0.8);
   -webkit-box-shadow: -1px 1px 65px -4px rgba(0, 0, 0, 0.8);
   -moz-box-shadow: -1px 1px 65px -4px rgba(0, 0, 0, 0.8);
@@ -12121,10 +12120,9 @@ h3, .h3 {
 }
 
 .card {
-  border-radius: 15px;
   background: #5d6371;
   margin: auto;
-  height: 400px;
+  width: 80%;
 }
 
 .card-img-top {
@@ -12153,7 +12151,7 @@ h3, .h3 {
   color: #ffa29a;
   text-decoration: none;
   position: relative;
-  left: 160px;
+  left: 130px;
   font-size: larger;
 }
 
@@ -12190,8 +12188,8 @@ h3, .h3 {
 }
 .carousel {
   position: relative;
-  overflow: hidden;
-  height: 300px; /* Ajustez la hauteur selon vos besoins */
+  height: 300px;
+  margin-bottom: 100px; /* Ajustez la hauteur selon vos besoins */
 }
 
 .review {
@@ -12226,7 +12224,7 @@ footer h5, footer .h5 {
   margin: auto;
   border: 3px solid #ffa29a;
   border-radius: 15px;
-  width: 60%;
+  width: 80%;
   padding: 20px;
   display: flex;
   flex-direction: column;
@@ -12235,7 +12233,6 @@ footer h5, footer .h5 {
 
 .connexion label {
   align-self: flex-start;
-  margin-left: 40px; /* Aligne les labels à gauche */
 }
 
 .connexion input {
@@ -12365,4 +12362,80 @@ input:focus {
 #partOne,
 #partTwo {
   height: 520px;
+}
+
+.cards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 260px;
+  padding: 20px 1px;
+  margin: 50px auto;
+  text-align: center;
+  position: relative;
+  box-shadow: 0 10px 15px -3px rgba(207, 208, 210, 0.4), 0 4px 6px -4px rgba(194, 194, 194, 0.4);
+  border-radius: 10px;
+  background: #ffa29a;
+  background: linear-gradient(180deg, #ffa29a 0%, #5d6371 80%);
+  background: -moz-linear-gradient(180deg, #ffa29a 0%, #5d6371 80%);
+}
+
+.content {
+  padding: 20px;
+}
+
+.content .price {
+  color: #faf2d9;
+  font-weight: 800;
+  font-size: 50px;
+  text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.42);
+}
+
+.content .description {
+  color: #faf2d9;
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+.content .titles {
+  font-weight: 800;
+  text-transform: uppercase;
+  color: #faf2d9;
+  margin-top: 10px;
+  font-size: 25px;
+  letter-spacing: 1px;
+}
+
+button {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  border: none;
+  outline: none;
+  color: #5d6371;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 0.75rem;
+  padding: 0.75rem 1.5rem;
+  background-color: #ffa29a;
+  border-radius: 0.5rem;
+  width: 90%;
+  text-shadow: 0px 4px 18px #2c3442;
+  font-size: larger;
+}
+button:hover {
+  background-color: rgba(255, 162, 154, 0.1647058824);
+}
+
+@media (min-width: 1000px) {
+  .multiCard {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    justify-content: center;
+  }
+  .cards {
+    min-width: 300px; /* Ensures cards take up space evenly */
+  }
 }/*# sourceMappingURL=app.css.map */
