--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -32,7 +32,7 @@
         <a href="#" class="btn-rose">Je découvre</a>
     </div>
         <h2 class="mb-5">Mais aussi...</h2>
-    <div class="card m-auto" style="width: 18rem;">
+    <div class="card m-auto">
         <img src="{{asset('images/reunion.svg')}}" class="card-img-top" alt="photo de personne en reunion">
         <div class="card-body">
             <h5 class="card-title">Les salles de réunion</h5>
