create reservation controller

--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -31,7 +31,8 @@
     <a href="{{path('app_office_work')}}"><div class="dropbtn">Evad'atelier</div></a>
     <a href="{{path('app_office_domicile')}}"><div class="dropbtn">Evad'domiciliation</div></a>
     <a href="{{path('app_tarif')}}"><div class="dropbtn">Tarifs</div></a>
-    <a><div class="dropbtn call-me">On s'appelle ?</div></a>
+    <a href="{{path('app_reservation')}}"><div class="dropbtn">Réservation</div></a>
+    {# <a><div class="dropbtn call-me">On s'appelle ?</div></a> #}
 </nav>
 
 
