affichage full calendar et personalisation

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -12438,4 +12438,16 @@ button:hover {
   .cards {
     min-width: 300px; /* Ensures cards take up space evenly */
   }
+}
+/* Style pour les appareils mobiles */
+@media (max-width: 768px) {
+  .fc .fc-toolbar-title {
+    display: none;
+  }
+  .fc-next-button .fc-button .fc-button-primary {
+    font-size: 0.3em;
+  }
+  .fc-button-group {
+    margin: 1em;
+  }
 }/*# sourceMappingURL=app.css.map */
