--- a/templates/reservation/index.html.twig
+++ b/templates/reservation/index.html.twig
@@ -5,7 +5,8 @@
 {% block body %}
 {% include "partials/_header.html.twig" %}
 <main>
-    <h1>Réseravation</h1>
+    <h1 class='mb-5'>Réseravation</h1>
+    <div id="calendar"></div>
 </main>
 {% include "partials/_footer.html.twig" %}
 
