connexion calendar bdd

--- a/templates/reservation/index.html.twig
+++ b/templates/reservation/index.html.twig
@@ -11,3 +11,6 @@
 {% include "partials/_footer.html.twig" %}
 
 {% endblock %}
+{# {% block javascripts %}
+    <script src="{{ asset('path/to/your/calendar.js') }}"></script>
+{% endblock %} #}
