--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -12446,7 +12446,9 @@ button:hover {
 /* Style pour les appareils mobiles */
 @media (max-width: 768px) {
   .fc .fc-toolbar-title {
-    display: none;
+    font-size: 1em;
+    position: absolute;
+    top: 180px; /* Taille de police réduite pour les petits écrans */
   }
   .fc-next-button .fc-button .fc-button-primary {
     font-size: 0.3em;
