--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -466,8 +466,9 @@ button {
 /* Style pour les appareils mobiles */
 @media (max-width: 768px) {
   .fc .fc-toolbar-title {
-    // font-size: 1em; /* Taille de police réduite pour les petits écrans */
-    display: none;
+    font-size: 1em;
+    position: absolute;
+    top: 180px; /* Taille de police réduite pour les petits écrans */
   }
 
   .fc-next-button .fc-button .fc-button-primary {
