--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,8 @@
     <style>
   @import url('https://fonts.googleapis.com/css2?family=Dosis&display=swap');
 </style>
+        <meta name="csrf-token" content="{{ csrf_token('token_id') }}">
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
