--- a/templates/payment/index.html.twig
+++ b/templates/payment/index.html.twig
@@ -14,7 +14,8 @@
         <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at posuere eros. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
       </div>
         <button>
-          Reserver
+              <a href="{{path('app_reservation')}}?workspace=7"><div class="dropbtn">Réservation</div></a>
+
         </button>
   </div>
 
