--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" src="">
-        <meta name="description" content="Un lieu pour travailler ou règne la sérénité">
+        <meta name="description" content="Lieu de parttage et travail flexible">
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
