--- a/templates/reservation/index.html.twig
+++ b/templates/reservation/index.html.twig
@@ -7,6 +7,13 @@
 <main>
     <h1 class='mb-5'>Réseravation</h1>
     <div id="calendar"></div>
+
+    {# Intercepter le clic sur payer avec un JavaScript, récupérer la sélection faite dans full calendar pour la date et heure, et l'ajouter aux données envoyées
+    dans le formulaire #}
+    <form method="POST" action={{ path('app_payment') }}>
+        <input type="hidden" name="workspaceId" value="{{ workspaceId }}" />
+        <button type="submit">Payer</button>
+    </form>
 </main>
 {% include "partials/_footer.html.twig" %}
 
