--- a/templates/review/index.html.twig
+++ b/templates/review/index.html.twig
@@ -6,7 +6,7 @@
 {% include "partials/_header.html.twig" %}
 <main class="pb-5">
     <h1 class="testForm">Donnez votre avis !</h1>
-    <div class="form-part registration-form mt-5">
+    <div class="form-review registration-form mt-5">
     {{form_start(reviewForm)}}
     {{form_row(reviewForm.author, {
         label: 'Auteur',
