--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -522,3 +522,8 @@ button {
     margin: 1em;
   }
 }
+// ======================================= RGPD ==============================
+.aRGPD {
+  margin-left: 50%;
+  transform: translateY(-50%);
+}
