--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -1,3 +1,4 @@
 <footer>
     <h5 class="text-center">On s'appelle ?</h5>
+    <a href="{{path('app_RGPD')}}" class="aRGPD">RGPD</a></button>
 </footer>
