add cookie page

--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -1,4 +1,5 @@
 <footer>
-    <h5 class="text-center">On s'appelle ?</h5>
-    <a href="{{path('app_RGPD')}}" class="aRGPD">RGPD</a></button>
+    <h4 class="callFooter">On s'appelle ?</h4>
+    <a class="aRGPD" href="{{path('app_RGPD')}}">RGPD</a></button>
+    <a class="acookie" href="{{path('app_cookie')}}">Politique des Cookies</a></button>
 </footer>
