--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -12232,7 +12232,6 @@ h3, .h3 {
 
 footer {
   background: #ffa29a;
-  height: 80px;
 }
 footer h5, footer .h5 {
   padding: 10px;
@@ -12504,6 +12503,28 @@ button:hover {
   }
 }
 .aRGPD {
-  margin-left: 50%;
-  transform: translateY(-50%);
+  color: #212529;
+  font-size: 1.3em;
+  padding: 1.3em 0 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  font-weight: bolder;
+}
+
+.callFooter {
+  text-align: center;
+  padding-top: 1.5em;
+}
+
+.acookie {
+  color: #212529;
+  font-size: 1.3em;
+  padding: 0 0 1.5em 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  font-weight: bolder;
 }/*# sourceMappingURL=app.css.map */
