--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -246,7 +246,7 @@ h3 {
 // ===================================== FOOTER ====================================
 footer {
   background: $rose;
-  height: 80px;
+
   & h5 {
     padding: 10px;
     font-size: 1.3em;
@@ -524,6 +524,26 @@ button {
 }
 // ======================================= RGPD ==============================
 .aRGPD {
-  margin-left: 50%;
-  transform: translateY(-50%);
+  color: #212529;
+  font-size: 1.3em;
+  padding: 1.3em 0 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  font-weight: bolder;
+}
+.callFooter {
+  text-align: center;
+  padding-top: 1.5em;
+}
+.acookie {
+  color: #212529;
+  font-size: 1.3em;
+  padding: 0 0 1.5em 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  font-weight: bolder;
 }
