add mlodalJs and contactController

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -63,6 +63,29 @@
         </div>
     {% endif %}
 <div class="end"></div>
+<!-- Button trigger modal -->
+{# <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCookie">
+  Launch demo modal
+</button> #}
+
+<!-- Modal -->
+<div class="modal fade" id="modalCookie" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-rose">En savoir plus</button>
+      </div>
+    </div>
+  </div>
+</div>
 </main>
 {% include "partials/_footer.html.twig" %}
 {% endblock %}
