--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -80,7 +80,7 @@
         ...
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button w-1" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         <button type="button" class="btn btn-rose">En savoir plus</button>
       </div>
     </div>
