--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -12527,4 +12527,27 @@ button:hover {
   align-items: center;
   text-decoration: none;
   font-weight: bolder;
+}
+
+.contactForm {
+  width: 80%;
+  margin: auto;
+}
+
+.btn-contact {
+  width: 40%;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  margin-bottom: 1.5em;
+}
+
+textarea {
+  resize: none;
+}
+
+@media screen and (min-width: 400px) {
+  .contactForm {
+    width: 40%;
+  }
 }/*# sourceMappingURL=app.css.map */
