--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,20 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ContactController!{% endblock %}
+{% block title %}Contact{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Users/romain/dev/projet-dev/Evadespace/src/Controller/ContactController.php'|file_link(0) }}">src/Controller/ContactController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Users/romain/dev/projet-dev/Evadespace/templates/contact/index.html.twig'|file_link(0) }}">templates/contact/index.html.twig</a></code></li>
-    </ul>
-</div>
+{% include "partials/_header.html.twig" %}
+<main>
+    <h1>Contact</h1>
+    <div class="contactForm">
+        {{ form_start(contactForm) }} 
+        {{ form_row(contactForm.email) }}
+        {{ form_row(contactForm.message) }}  
+        <button type="submit" class="btn-rose btn-contact">Envoyer</button>
+        {{ form_end(contactForm) }}
+    </div>
+</main>
+{% include "partials/_footer.html.twig" %}
 {% endblock %}
