--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -11991,8 +11991,10 @@ body {
 }
 
 header {
-  background: #ffa29a;
+  background: #000;
   height: 80px;
+  z-index: 3;
+  top: 0px;
 }
 
 .menu-mobile {
@@ -12008,8 +12010,10 @@ header {
 }
 
 .logo {
-  width: 90px;
-  height: 80px;
+  width: 170px;
+  height: 60px;
+  margin-top: 10px;
+  padding-left: 10px;
 }
 
 .personn {
