--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -18,8 +18,11 @@ $gris: #5d6371;
 }
 // ================================== HEADER ============================================
 header {
-  background: $rose;
+  background: $black;
   height: 80px;
+  // position: fixed;
+  z-index: 3;
+  top: -0px;
 }
 .menu-mobile {
   position: absolute;
@@ -32,9 +35,11 @@ header {
   top: 2.8%;
 }
 .logo {
-  width: 90px;
-  height: 80px;
+  width: 170px;
+  height: 60px;
+  margin-top: 10px;
   // margin-left: 15px;
+  padding-left: 10px;
 }
 .personn {
   position: absolute;
