--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -13,7 +13,7 @@
         <p class="p-encart">Partagez un lieu convivial et chaleureux, <br>
         favorisant vos projets professionnels.</p>
     </div>
-    <h2><img src="{{asset('images/image-3.svg')}}" alt="image de bureu" style="margin-right: 20px;">Nos prestations</h2>
+    <h2><img src="{{asset('images/sigle.png')}}" alt="image de bureu" style="margin-right: 20px; width: 50px; height: 50px; underline">Nos prestations</h2>
     <p class="text-center mt-5">Notre espace évasion est accessibles 24h/24 et 7j/7. Nos formules sont clés en main et sans engagement pour que vous puissiez vous concentrer sur votre activité.</p>
     <div class="photo-mobile d-flex justify-content-center mt-5 mb-5">
         <img src="{{asset('images/bureau-prive.jpg')}}" alt="photo bureau privé" class="big-photo">
