--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -11993,33 +11993,34 @@ body {
 header {
   background: #000;
   height: 80px;
+  position: fixed;
   z-index: 3;
   top: 0px;
 }
 
 .menu-mobile {
   position: absolute;
-  right: 5%;
-  top: 2%;
+  right: 19%;
+  top: 17%;
 }
 
 .menu-close-mobile {
   position: absolute;
-  right: 6.5%;
-  top: 2.8%;
+  right: 20%;
+  top: 25%;
 }
 
 .logo {
   width: 170px;
-  height: 60px;
-  margin-top: 10px;
+  height: 45px;
+  margin-top: 20px;
   padding-left: 10px;
 }
 
 .personn {
   position: absolute;
-  right: 25%;
-  top: 3%;
+  right: 35%;
+  top: 25%;
 }
 
 .burgers {
@@ -12060,6 +12061,10 @@ nav > a {
     margin-left: 15px;
   }
 }
+main {
+  margin-top: 120px;
+}
+
 main > h1, main > .h1 {
   text-align: center;
   margin-top: 30px;
