--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -20,31 +20,31 @@ $gris: #5d6371;
 header {
   background: $black;
   height: 80px;
-  // position: fixed;
+  position: fixed;
   z-index: 3;
   top: -0px;
 }
 .menu-mobile {
   position: absolute;
-  right: 5%;
-  top: 2%;
+  right: 19%;
+  top: 17%;
 }
 .menu-close-mobile {
   position: absolute;
-  right: 6.5%;
-  top: 2.8%;
+  right: 20%;
+  top: 25%;
 }
 .logo {
   width: 170px;
-  height: 60px;
-  margin-top: 10px;
+  height: 45px;
+  margin-top: 20px;
   // margin-left: 15px;
   padding-left: 10px;
 }
 .personn {
   position: absolute;
-  right: 25%;
-  top: 3%;
+  right: 35%;
+  top: 25%;
 }
 .burgers {
   background: $rose;
@@ -85,6 +85,9 @@ nav > a {
 }
 
 // ========================== MAIN ===========================================
+main {
+  margin-top: 120px;
+}
 main > h1 {
   text-align: center;
   margin-top: 30px;
