--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,13 +1,13 @@
 <header class="d-flex">
     <a href="{{path('home')}}"><img src="{{asset('images/logo-long-blanc.png')}}" alt="Logo Evad'espace" class="logo"></a>
-    <a href="{{path('app_login')}}"><svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="#5d6371" class=" personn bi bi-person-circle" viewBox="0 0 16 16">
+    <a href="{{path('app_login')}}"><svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="#ffffff" class=" personn bi bi-person-circle" viewBox="0 0 16 16">
   <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
   <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
 </svg></a>
-    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#5d6371" class="bi bi-list menu-mobile" viewBox="0 0 16 16">
+    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff" class="bi bi-list menu-mobile" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
 </svg>
-<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#5d6371" class="bi bi-x-circle menu-close-mobile" viewBox="0 0 16 16">
+<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#ffffff" class="bi bi-x-circle menu-close-mobile" viewBox="0 0 16 16">
   <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
   <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
 </svg>
