--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -42,7 +42,7 @@
                 </svg>  Je découvre</a>
         </div>
 </div>
-<h2><img src="{{asset('images/avis.svg')}}" alt="image de bureu" style="margin-right: 20px;">Les avis</h2>
+<h2><img src="{{asset('images/sigle.png')}}" alt="image de bureu"  style="margin-right: 20px; width: 50px; height: 50px; underlinemargin-right: 20px;">Les avis</h2>
     <div class="carousel d-flex">
     {% for review in reviews %}
         <div class="review mt-5">
