--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,9 +1,10 @@
 <header class="d-flex">
     <a href="{{path('home')}}"><img src="{{asset('images/logo-long-blanc.png')}}" alt="Logo Evad'espace" class="logo"></a>
-    <a href="{{path('app_login')}}"><svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="#ffffff" class=" personn bi bi-person-circle" viewBox="0 0 16 16">
+    <a id="logOut" href="{{path('app_login')}}"><svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="#ffffff" class=" personn bi bi-person-circle" viewBox="0 0 16 16">
   <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
   <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
 </svg></a>
+  
     <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff" class="bi bi-list menu-mobile" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
 </svg>
@@ -11,30 +12,20 @@
   <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
   <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
 </svg>
-<nav class="burgers">
-    {# <div class="dropdown">
-        <a href="#">
-            <div class="dropbtn" id="dropdown-btn">Evad'bureaux partagés <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" id="arrow-down" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
-  <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
-</svg></div>
-        </a>
-        <div class="dropdown-content" id="dropdown-content">
-            <a href="#">Postes attitrés</a>
-            <a href="#">De passage en openspace</a>
-            <a href="#">Passages réguliers</a>
-        </div>
-    </div> #}
-    <a href="{{path('app_office_sharing')}}"><div class="dropbtn">Evad'bureaux partagés</div></a>
-    <a href="{{path('app_office_private')}}"><div class="dropbtn">Evad'bureaux privés</div></a>
-    <a href="{{path('app_office_event')}}"><div class="dropbtn">Evad'événement</div></a>
-    <a href="{{path('app_office_meeting')}}"><div class="dropbtn">Evad'réunion</div></a>
-    <a href="{{path('app_office_work')}}"><div class="dropbtn">Evad'atelier</div></a>
-    <a href="{{path('app_office_domicile')}}"><div class="dropbtn">Evad'domiciliation</div></a>
-    <a href="{{path('app_tarif')}}"><div class="dropbtn">Tarifs</div></a>
-    <a href="{{path('app_reservation')}}"><div class="dropbtn">Réservation</div></a>
-    {# <a><div class="dropbtn call-me">On s'appelle ?</div></a> #}
-</nav>
 
-
+  <nav class="burgers">
+      <a href="{{path('app_office_sharing')}}"><div class="dropbtn">Evad'bureaux partagés</div></a>
+      <a href="{{path('app_office_private')}}"><div class="dropbtn">Evad'bureaux privés</div></a>
+      <a href="{{path('app_office_event')}}"><div class="dropbtn">Evad'événement</div></a>
+      <a href="{{path('app_office_meeting')}}"><div class="dropbtn">Evad'réunion</div></a>
+      {# <a href="{{path('app_office_work')}}"><div class="dropbtn">Evad'atelier</div></a>
+      <a href="{{path('app_office_domicile')}}"><div class="dropbtn">Evad'domiciliation</div></a> #}
+      <a href="{{path('app_tarif')}}"><div class="dropbtn">Tarifs/reservation</div></a>
+      {# <a href="{{path('app_reservation')}}"><div class="dropbtn">Réservation</div></a> #}
+      {# <a><div class="dropbtn call-me">On s'appelle ?</div></a> #}
+  </nav>
+  {# <div id="hoverDiv">
+    <a class="deconexion" href="{{path('app_logout')}}">Déconnexion</a>
+  </div> #}
 </header>
 
